# cargo-extract-readme

./: Cargo.toml
src/: main.rs
