[package]
name = "cargo-extract-readme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
clap-cargo = { version = "0.10.0", features = ["cargo_metadata"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
fmt2io = "0.2.0"
itertools = "0.10.5"
log = "0.4.17"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"
rustdoc-json = "0.8.3"
rustdoc-types = "0.20.0"
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
